QR-4 - zxing repo url should not use https in pom
removed https to http instead

--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,11 @@
     <repositories>
         <repository>
             <id>google-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
         <repository>
             <id>google-releases</id>
-            <url>https://oss.sonatype.org/content/repositories/releases</url>
+            <url>http://oss.sonatype.org/content/repositories/releases</url>
         </repository>
     </repositories>
 
